@@ -17,31 +17,31 @@
 
 [Background]
 @SETTING_BACKGROUND_MODE@=@DEFAULT_BACKGROUND_MODE@
-@SETTING_BACKGROUND_COLOR@=@DEFAULT_BACKGROUND_COLOR_R@@DEFAULT_BACKGROUND_COLOR_G@@DEFAULT_BACKGROUND_COLOR_B@
+@SETTING_BACKGROUND_COLOR@=#@DEFAULT_BACKGROUND_COLOR_R@@DEFAULT_BACKGROUND_COLOR_G@@DEFAULT_BACKGROUND_COLOR_B@
 #@SETTING_BACKGROUND_IMAGE@=
 #@SETTING_SLIDESHOW_DIRECTORY@=
 #@SETTING_SLIDESHOW_IMAGE_DURATION@=@DEFAULT_SLIDESHOW_IMAGE_DURATION_CONFIG@
 #@SETTING_SLIDESHOW_TRANSITION_TIME@=@DEFAULT_SLIDESHOW_TRANSITION_TIME_CONFIG@
 @SETTING_BACKGROUND_OVERLAY@=@DEFAULT_BACKGROUND_OVERLAY@
-@SETTING_BACKGROUND_OVERLAY_COLOR@=@DEFAULT_BACKGROUND_OVERLAY_COLOR_R@@DEFAULT_BACKGROUND_OVERLAY_COLOR_G@@DEFAULT_BACKGROUND_OVERLAY_COLOR_B@
+@SETTING_BACKGROUND_OVERLAY_COLOR@=#@DEFAULT_BACKGROUND_OVERLAY_COLOR_R@@DEFAULT_BACKGROUND_OVERLAY_COLOR_G@@DEFAULT_BACKGROUND_OVERLAY_COLOR_B@
 @SETTING_BACKGROUND_OVERLAY_OPACITY@=@DEFAULT_BACKGROUND_OVERLAY_OPACITY@
 
 [Titles]
 @SETTING_TITLE_FONT@=@FONT_PREFIX@@DEFAULT_FONT@
 @SETTING_TITLE_FONT_SIZE@=@DEFAULT_FONT_SIZE@
-@SETTING_TITLE_FONT_COLOR@=@DEFAULT_TITLE_FONT_COLOR_R@@DEFAULT_TITLE_FONT_COLOR_G@@DEFAULT_TITLE_FONT_COLOR_B@
+@SETTING_TITLE_FONT_COLOR@=#@DEFAULT_TITLE_FONT_COLOR_R@@DEFAULT_TITLE_FONT_COLOR_G@@DEFAULT_TITLE_FONT_COLOR_B@
 @SETTING_TITLE_OPACITY@=@DEFAULT_TITLE_OPACITY@
 @SETTING_TITLE_SHADOWS@=@DEFAULT_TITLE_SHADOWS@
-@SETTING_TITLE_SHADOW_COLOR@=@DEFAULT_TITLE_SHADOW_COLOR_R@@DEFAULT_TITLE_SHADOW_COLOR_G@@DEFAULT_TITLE_SHADOW_COLOR_B@
+@SETTING_TITLE_SHADOW_COLOR@=#@DEFAULT_TITLE_SHADOW_COLOR_R@@DEFAULT_TITLE_SHADOW_COLOR_G@@DEFAULT_TITLE_SHADOW_COLOR_B@
 @SETTING_TITLE_OVERSIZE_MODE@=@DEFAULT_TITLE_OVERSIZE_MODE@
 @SETTING_TITLE_PADDING@=@DEFAULT_TITLE_PADDING@
 
 [Highlight]
 @SETTING_HIGHLIGHT_ENABLED@=@DEFAULT_HIGHLIGHT_ENABLED@
-@SETTING_HIGHLIGHT_FILL_COLOR@=@DEFAULT_HIGHLIGHT_FILL_COLOR_R@@DEFAULT_HIGHLIGHT_FILL_COLOR_G@@DEFAULT_HIGHLIGHT_FILL_COLOR_B@
+@SETTING_HIGHLIGHT_FILL_COLOR@=#@DEFAULT_HIGHLIGHT_FILL_COLOR_R@@DEFAULT_HIGHLIGHT_FILL_COLOR_G@@DEFAULT_HIGHLIGHT_FILL_COLOR_B@
 @SETTING_HIGHLIGHT_FILL_OPACITY@=@DEFAULT_HIGHLIGHT_FILL_OPACITY@
 @SETTING_HIGHLIGHT_OUTLINE_SIZE@=@DEFAULT_HIGHLIGHT_OUTLINE_SIZE@
-@SETTING_HIGHLIGHT_OUTLINE_COLOR@=@DEFAULT_HIGHLIGHT_OUTLINE_COLOR_R@@DEFAULT_HIGHLIGHT_OUTLINE_COLOR_G@@DEFAULT_HIGHLIGHT_OUTLINE_COLOR_B@
+@SETTING_HIGHLIGHT_OUTLINE_COLOR@=#@DEFAULT_HIGHLIGHT_OUTLINE_COLOR_R@@DEFAULT_HIGHLIGHT_OUTLINE_COLOR_G@@DEFAULT_HIGHLIGHT_OUTLINE_COLOR_B@
 @SETTING_HIGHLIGHT_OUTLINE_OPACITY@=@DEFAULT_HIGHLIGHT_OUTLINE_OPACITY@
 @SETTING_HIGHLIGHT_CORNER_RADIUS@=@DEFAULT_HIGHLIGHT_CORNER_RADIUS@
 @SETTING_HIGHLIGHT_VPADDING@=@DEFAULT_HIGHLIGHT_VPADDING@
@@ -49,9 +49,9 @@
 
 [Scroll Indicators]
 @SETTING_SCROLL_INDICATORS@=@DEFAULT_SCROLL_INDICATORS@
-@SETTING_SCROLL_INDICATOR_FILL_COLOR@=@DEFAULT_SCROLL_INDICATOR_FILL_COLOR_R@@DEFAULT_SCROLL_INDICATOR_FILL_COLOR_G@@DEFAULT_SCROLL_INDICATOR_FILL_COLOR_B@
+@SETTING_SCROLL_INDICATOR_FILL_COLOR@=#@DEFAULT_SCROLL_INDICATOR_FILL_COLOR_R@@DEFAULT_SCROLL_INDICATOR_FILL_COLOR_G@@DEFAULT_SCROLL_INDICATOR_FILL_COLOR_B@
 @SETTING_SCROLL_INDICATOR_OUTLINE_SIZE@=@DEFAULT_SCROLL_INDICATOR_OUTLINE_SIZE@
-@SETTING_SCROLL_INDICATOR_OUTLINE_COLOR@=@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_R@@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_G@@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_B@
+@SETTING_SCROLL_INDICATOR_OUTLINE_COLOR@=#@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_R@@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_G@@DEFAULT_SCROLL_INDICATOR_OUTLINE_COLOR_B@
 @SETTING_SCROLL_INDICATOR_OPACITY@=@DEFAULT_SCROLL_INDICATOR_OPACITY@
 
 [Clock]
@@ -60,9 +60,9 @@
 @SETTING_CLOCK_ALIGNMENT@=@DEFAULT_CLOCK_ALIGNMENT@
 @SETTING_CLOCK_FONT@=@FONT_PREFIX@@DEFAULT_CLOCK_FONT@
 @SETTING_CLOCK_FONT_SIZE@=@DEFAULT_CLOCK_FONT_SIZE@
-@SETTING_CLOCK_FONT_COLOR@=@DEFAULT_CLOCK_FONT_COLOR_R@@DEFAULT_CLOCK_FONT_COLOR_G@@DEFAULT_CLOCK_FONT_COLOR_B@
+@SETTING_CLOCK_FONT_COLOR@=#@DEFAULT_CLOCK_FONT_COLOR_R@@DEFAULT_CLOCK_FONT_COLOR_G@@DEFAULT_CLOCK_FONT_COLOR_B@
 @SETTING_CLOCK_SHADOWS@=@DEFAULT_CLOCK_SHADOWS@
-@SETTING_CLOCK_SHADOW_COLOR@=@DEFAULT_CLOCK_SHADOW_COLOR_R@@DEFAULT_CLOCK_SHADOW_COLOR_G@@DEFAULT_CLOCK_SHADOW_COLOR_B@
+@SETTING_CLOCK_SHADOW_COLOR@=#@DEFAULT_CLOCK_SHADOW_COLOR_R@@DEFAULT_CLOCK_SHADOW_COLOR_G@@DEFAULT_CLOCK_SHADOW_COLOR_B@
 @SETTING_CLOCK_MARGIN@=@DEFAULT_CLOCK_MARGIN@
 @SETTING_CLOCK_OPACITY@=@DEFAULT_CLOCK_OPACITY@
 @SETTING_CLOCK_TIME_FORMAT@=@DEFAULT_CLOCK_TIME_FORMAT@
